--- a/notas/06-feature-eng-ext.Rmd
+++ b/notas/06-feature-eng-ext.Rmd
@@ -479,3 +479,323 @@ calc_error(mod_3, casas_p, "SalePrice")
 calc_error(mod_8, casas_p, "SalePrice")
 ```
 
+
+## Categorización de variables
+
+
+En categorización de variable, intentamos hacer un ajuste local en distintas 
+partes del espacio de entradas. La idea es construir cubetas, particionando el rango de una variable dada, y 
+ajustar entonces un modelo usando la variable dummy indicadora de cada cubeta.  
+
+Cuando la relación entre entradas y salida no es lineal,  podemos obtener menor
+sesgo en nuestros 
+modelos usando esta técnica. Nótese sin embargo que estamos tirando información potencialmente
+útil dentro de cada corte, y quizá incrementando varianza pues necesitamos estimar varios parámetros.
+
+En este ejemplo, escogimos edades de corte
+aproximadamente separadas por 10 años, por ejemplo:
+
+```{r, message = FALSE}
+dat_wage <- read_csv("../datos/wages.csv")
+ggplot(dat_wage, aes(x=age, y=wage)) + 
+    geom_point(alpha = 0.2) +
+    facet_wrap(~education)
+```
+
+```{r}
+dat_wage <- dat_wage %>% 
+  mutate(age_cut = cut_width(age, 10))
+head(dat_wage)
+mod_age <- lm(wage ~ age_cut + education + age_cut:education, data = dat_wage)
+mod_age
+dat_wage$pred_wage <- predict(mod_age)
+ggplot(dat_wage) + geom_point(aes(x=age, y=wage), alpha = 0.2) +
+  geom_line(aes(x=age, y=pred_wage), colour = 'red', size=1.1) +
+        facet_wrap(~education)
+```
+
+Y nótese que ajustamos un valor para cada rango de edad en cada uno de los grupos de educación
+(pues pusimos una interacción).
+
+- Podemos escoger los puntos de corte en lugares que son razonables para el problema
+(rangos en los es razonable modelar como una constante).
+- También podemos hacer cortes automáticos usando percentiles de los datos: por ejemplo,
+cortar en cuatro usando los percentiles 25\%, 50\% y 75\%. Con más datos es posible
+incrementar el número de cortes.
+- Nótese que cuando hacemos estas categorizaciones estamos incrementando el 
+número de parámetros a estimar del modelo (si hacemos tres cortes, por ejemplo, aumentamos
+en 3 el número de parámetros).
+
+
+```{block2, type='comentario'}
+Las categorizaciones de variables pueden ser útiles cuando sabemos que hay efectos
+no lineales de la variable subyacente (por ejemplo, edad o nivel socioeconómico),
+y las categorías son suficientemente chicas para que el modelo localmente constante
+sea razonable.
+
+Sin embargo, muchas veces otros tipos de transformaciones pueden dar mejoras en sesgo
+y en varianza en relación a categorización.
+```
+
+Muchas veces los splines son mejores opciones:
+
+## Splines (opcional)
+
+En estos ejemplos, también es posible incluir términos cuadráticos para modelar
+la relación, por ejemplo:
+
+```{r}
+dat_wage <- dat_wage %>% 
+  mutate(age_cut = cut_width(age, 10), age_2 = age^2)
+head(dat_wage)
+mod_age_2 <- lm(wage ~ age + age_2 + education + age:education + age_2:education, 
+              data = dat_wage)
+dat_wage$pred_wage <- predict(mod_age_2)
+ggplot(dat_wage) + geom_point(aes(x=age, y=wage), alpha = 0.2) +
+  geom_line(aes(x=age, y=pred_wage), colour = 'red', size=1.1) +
+        facet_wrap(~education)
+```
+
+Nótese que con este método obtenemos un ajuste comparable, pero utilizando menos
+de la mitad de los parámetros. 
+
+Estas dos técnicas (polinomios y categorización) para hacer más flexible el modelo lineal tienen
+algunas deficiencias:
+
+- Muchas veces usar potencias de variables de entrada es una mala idea, pues
+fácilmente podemos encontrar problemas numéricos (potencias altas pueden
+dar valores muy chicos o muy grandes).
+- La categorización de variables numéricas puede resultar en predictores 
+con discontinuidades, lo cual no siempre es deseable (interpretación), y requiere más
+parámetros para capturar estructuras que varían de manera continua.
+
+Una alternativa es usar *splines*, que son familias de funciones con buenas propiedades
+ que nos permiten hacer expansiones del espacio de entradas. No las veremos con
+ detalle, pero aquí hay unos ejemplos:
+ 
+ Por ejemplo, podemos usar B-spines, que construyen "chipotes" en distintos
+ rangos de la variable de entrada (es como hacer categorización, pero con
+ funciones de respuesta suaves):
+ 
+```{r}
+library(splines2)
+age <- seq(18,80, 0.2)
+splines_age  <- bSpline(age, 
+                         #knots = c(25, 35, 45, 55, 65),
+                         knots = c(40, 60),
+                         degree = 3)
+matplot(x = age, y = splines_age, type = 'l')
+``` 
+ 
+**Observación**:  estos splines son como una versión suave de categorización
+de variables numéricas. En particular, los splines de grado 0 son justamente
+funciones que categorizan variables:
+```{r}
+splines_age  <- bSpline(age, 
+                         knots = c(25, 35, 45, 55, 65),
+                         degree = 0)
+matplot(splines_age, type='l')
+``` 
+
+Por ejemplo: si expandimos el espacio de entradas con estos splines y 
+corremos el modelo:
+ 
+```{r, message = FALSE, warning = FALSE}
+dat_wage <- read_csv("../datos/wages.csv")
+# nudos en cuantiles 1/3 y 2/3, por ejemplo:
+cuantiles_edad <- quantile(dat_wage$age, c(1/3, 2/3))
+cuantiles_edad
+splines_age  <- bSpline(dat_wage$age, 
+                         knots = c(35, 50),
+                         degree = 3) %>% as_tibble()
+colnames(splines_age) <- paste0('spline_', 1:5)
+dat_wage <- bind_cols(dat_wage, splines_age)
+dat_wage_sp <- dat_wage %>% select(wage, education, contains("spline"))
+mod_wage_sp <- lm(wage ~ . + education:(spline_1+spline_2+spline_3+spline_4+spline_5), data = dat_wage_sp)
+dat_wage$pred_wage <- predict(mod_wage_sp)
+ggplot(dat_wage) + geom_point(aes(x=age, y=wage), alpha = 0.2) +
+  geom_line(aes(x=age, y=pred_wage), colour = 'red', size=1.1) +
+        facet_wrap(~education)
+```
+
+Hay otras bases, como los i-splines, que tienen usos particulares
+(por ejemplo cuando queremos hacer regresión monótona, podemos restringir sus
+coeficientes a valores negativos). Este tipo de splines son similares
+a los que utilizamos implícitamente en **redes neuronales**. 
+Una base de i-splines es por ejemplo:
+
+```{r}
+splines_age  <- iSpline(age, 
+                         knots = c(35, 50),
+                         degree = 2)
+matplot(splines_age, type='l')
+``` 
+
+Y podemos verla en nuestro ejemplo:
+
+```{r}
+dat_wage <- read_csv("../datos/wages.csv")
+splines_age  <- iSpline(dat_wage$age, 
+                         knots = c(35, 50),
+                         degree = 2) %>% as_tibble()
+colnames(splines_age) <- paste0('spline_', 1:4)
+dat_wage <- bind_cols(dat_wage, splines_age)
+dat_wage_sp <- dat_wage %>% select(wage, education, contains("spline"))
+mod_wage_sp <- lm(wage ~ . + education:(spline_1+spline_2+spline_3+spline_4), data = dat_wage_sp)
+dat_wage$pred_wage <- predict(mod_wage_sp)
+ggplot(dat_wage) + geom_point(aes(x=age, y=wage), alpha = 0.2) +
+  geom_line(aes(x=age, y=pred_wage), colour = 'red', size=1.1) +
+        facet_wrap(~education)
+```
+
+
+**Observación**: usa regularización para este ejemplo. ¿Qué parte crees que
+podríamos mejorar si usamos regresión ridge, por ejemplo?
+
+## Modelando en escala logarítmica
+
+En muchos problemas, es natural transformar variables numéricas con el logaritmo. 
+Supongamos por ejemplo que en nuestro problema la variable $y$ es positiva,
+y también las entradas son positivas. En primer lugar podríamos intentar modelar
+$$ y =  b_0 + \sum b_j x_j, $$
+pero también podemos transformar las entradas y la salida para construir un 
+modelo multiplicativo:
+$y' = log(y) = b_0 + \sum b_k \log(x_j)$ 
+y ahora queremos predecir el logaritmo de $y$, no $y$ directamente. 
+
+Esta tipo de transformación tiene dos efectos:
+
+- Convierte modelos aditivos (regresión lineal) en modelos multiplicativos en
+las variables no transformadas (pero lineales en escala logarítmica). Esta estructura
+tiene más sentido para algunos problemas, y es más razonable que la forma lineal 
+aplique para este tipo de problemas.
+- Comprime la parte superior de la escala en relación a la parte baja, y esto es útil
+para aminorar el efecto de valores atípicos grandes (que puede tener malos efectos
+numéricos y también pueden producir que los atipicos dominen el error o la estimación
+de los coeficientes).
+
+
+#### Ejemplo {-}
+
+Consideramos predecir el quilataje de 
+
+```{r}
+set.seed(22)
+diamonds_muestra <- sample_n(diamonds, 1000)
+ggplot(diamonds_muestra, aes(x=carat, y=price)) + geom_point() +
+  geom_smooth(method="lm")
+```
+
+
+
+
+Nótese que el modelo lineal está sesgado, y produce sobrestimaciones y subestimaciones
+para distintos valores de $x$. Aunque podríamos utilizar un método más flexible para
+este modelo, una opción es transformar entrada y salida con logaritmo:
+
+
+```{r}
+diamonds_muestra <- diamonds_muestra %>% 
+  mutate(log_price = log(price), log_carat = log(carat))
+ggplot(diamonds_muestra, aes(x=log_carat, y=log_price)) + geom_point() +
+  geom_smooth(method = "lm")
+```
+
+ Podemos
+graficar también en unidades originales:
+
+```{r}
+ggplot(diamonds_muestra, aes(x=carat, y=price/1000)) + geom_point() +
+  geom_smooth(method = 'lm') + 
+  scale_x_log10(breaks=2^seq(-1,5,1)) + scale_y_log10(breaks=2^seq(-2,5,1))
+```
+
+Y vemos que la relación entre los logaritmos es lineal: redujimos el sesgo
+sin los costos adicionales de varianza que implica agregar más variables 
+e interacciones. En este caso, esta relación es naturalmente multiplicativa
+(un 10\% de incremento relativo en el peso produce un incremento constante
+en el precio).
+
+
+```{block2, type='comentario'}
+- Cuando una variable  *toma valores positivos y recorre varios órdenes 
+de magnitud*, 
+puede ayudar transformar con logaritmo o 
+raíz cuadrada (esto incluye transformar la variable respuesta).
+- Muchas veces es natural modelar en la escala logarítmica, como en el ejemplo
+de los diamantes.
+- También tiene utilidad cuando las variables de respuesta o entrada tienen distribuciones
+muy sesgadas a la derecha (con algunos valores órdenes de magnitud más grandes que la mayoría
+        del grueso de los datos). Tomar logaritmos resulta en mejoras numéricas, y 
+evita que algunos valores atipicos dominen el cálculo del error.
+- Menos común: variables que son proporciones $p$ pueden transformarse mediante la
+transformación inversa de la logística ($x = \log(\frac{p}{1-p})$.)
+```
+
+
+---
+
+**Discusión**:
+
+En un modelo lineal usual, tenemos que si cambiamos $x_j \to x_j + \Delta x$,
+entonces la predicción $y$ tiene un cambio de
+$$\Delta y = b_j \Delta x.$$
+
+Es decir, mismos cambios absolutos en alguna variable de entrada produce 
+mismos cambios absolutos en las predicciones, independientemente del nivel
+de las entradas.
+
+Sin embargo, el modelo logarítmico es multiplicativo, 
+pues tomando exponencial de ambos lados, obtenemos:
+
+$$y = B_0\prod x_j^{b_j}$$
+Entonces, si cambiamos $x_j \to x_j + \Delta x$, 
+el cambio porcentual en $y$ es
+$$ \frac{y+\Delta y}{y} = \left ( \frac{x_j +\Delta x}{x_j}\right )^{b_j}$$
+
+De modo que mismos cambios porcentuales en $x$ resultan en los mismos cambios
+porcentuales de $y$, independientemente del nivel de las entradas. 
+
+Adicionalmente, es útil notar que si 
+$\frac{\Delta x}{x_j}$ es chica, entonces aproximadamente
+$$ \frac{\Delta y}{y} \approx b_j \frac{\Delta x}{x_j}$$
+Es decir, el cambio relativo en $y$ es proporcional al cambio relativo en $x_j$ para
+cambios relativamente chicos en $x_j$, y el coeficiente es la constante de
+proporcionalidad.
+
+---
+
+
+
+#### Ejercicio {-}
+Puedes repetir el ejercicio de la tarea 6 transformando las variables numéricas
+con logaritmo (o $\log(1+x)$ cuando $x$ tiene ceros). 
+Utiliza el mismo error del concurso de kaggle, que es el error cuadrático medio
+en escala logarítmica (en el concurso, esta es otra razón para usar escala
+logarítmica en la variable respuesta.)
+
+### ¿Cuándo usar estas técnicas?
+
+Estas técnicas pueden mejorar considerablemente nuestros modelos lineales, pero
+a veces puede ser difícil de descubrir exactamente que transformaciones pueden ser
+útiles. Requiere conocimiento de dominio del problema que 
+enfrentamos. En general, 
+
+- Es mejor usar regularización al hacer este tipo de trabajo, 
+para protegernos de varianza alta cuando incluimos varias entradas derivadas.
+- Es buena idea probar incluir interacciones entre variables que tienen efectos grandes en la predicción, o interacciones que creemos son importantes en nuestro problema (por ejemplo,
+temperatura y viento en nuestro ejemplo de arriba, o existencia de estacionamiento y 
+tráfico vehicular como en nuestro ejemplo de predicción de ventas de una tienda).
+- Gráficas como la de arriba (entrada vs respuesta) pueden ayudarnos a decidir
+si conviene categorizar alguna variable o añadir un efecto no lineal. 
+
+Este es un trabajo que no es tan fácil, pero para problema con relativamente pocas
+variables es factible. En situaciones con muchas variables de entrada
+y muchos datos, pueden existir mejores opciones. 
+
+[Feature Engineering and Selection: A Practical Approach for Predictive Models](http://www.feat.engineering/index.html) es un buen libro donde puedes
+aprender más de *feature engineering*. En particular, no hablamos aquí de:
+
+- Tratamiento de datos faltantes
+- Tratamiento de datos en jerarquías (por ejemplo, predicciones para hogar con datos 
+de las personas que los componen, y otros temas de series de tiempo).
