--- a/notas/03-clasificacion.Rmd
+++ b/notas/03-clasificacion.Rmd
@@ -1008,7 +1008,7 @@ que coincide con el número que obtuvimos en keras.
 
 Adicionalmente a buscar devianzas bajas, cuando usamos las 
 probabilidades obtenidas para más análisis o algún proceso,
-es necesario checar el ajuste. Podemos hacer esto haciendo pruebas de la *calibración*
+es necesario checar el ajuste. Podemos hacer esto realizando pruebas de la *calibración*
 de las probabilidades que arroja el modelo.
 
 Esto quiere decir que si el modelo nos dice que la probabilidad de que la clase 1 es 0.8,
