--- a/notas/07-redes-neuronales.Rmd
+++ b/notas/07-redes-neuronales.Rmd
@@ -270,7 +270,7 @@ keras. El modelo, con una capa intermedia de dos unidades, y regularización
 ridge para los coeficientes, y optimización por descenso 
 en gradiente se define como:
 
-```{r}
+```{r, message = FALSE}
 library(keras)
 use_session_with_seed(1123)
 set.seed(923)
@@ -514,30 +514,30 @@ Como se ilustra en la siguiente gráfica:
 ```{r, echo=FALSE, fig.width=7}
  gr <- graph(
    c(c(1,4,1,5,2,4,2,5,3,4,3,5)))
- plot(gr, layout = matrix(c(-4,1,-4,0,-4,-1,0,1,0,-1), byrow=T, ncol=2),
-      vertex.label=c(expression(a[1]^2),expression(a[2]^2),expression(a[3]^2),
-        expression(a[1]^3), expression(a[2]^3)), 
+ plot(gr, layout = matrix(c(-6,2,-6,0,-6,-2,0,1,0,-1), byrow=T, ncol=2),
+      vertex.label=c(expression(a[1]^{(2)}),expression(a[2]^{(2)}),expression(a[3]^{(2)}),
+        expression(a[1]^{(3)}), expression(a[2]^{(3)})), 
       vertex.size=50, vertex.color=c('salmon','salmon','salmon','red','red'), vertex.label.cex=1.5,
       vertex.label.color='white',vertex.frame.color=NA,
-   edge.label=c(expression(theta[11]^3),expression(theta[21]^2),
-     expression(theta[12]^2),  expression(theta[22]^2),
-      expression(theta[13]^2), expression(theta[23]^2)))
+   edge.label=c(expression(theta[11]^{(2)}),expression(theta[21]^{(2)}),
+     expression(theta[12]^{(2)}),  expression(theta[22]^{(2)}),
+      expression(theta[13]^{(2)}), expression(theta[23]^{(2)})))
 ```
 
 Para visualizar las ordenadas (que también se llaman  **sesgos** en este contexto),
 ponemos $a_{0}^{(2)}=1$.
-```{r, echo=FALSE, fig.width=7}
+```{r, echo=FALSE, fig.width=7, fig.asp = 0.8}
  gr <- graph(
    c(c(1,5,1,6,2,5,2,6,3,5,3,6,4,5,4,6)))
- plot(gr, layout = matrix(c(-4,3,-4,1,-4,0,-4,-1,0,1,0,-1), byrow=T, ncol=2),
-      vertex.label=c(expression(a[0]^2), expression(a[1]^2),
-        expression(a[2]^2),expression(a[3]^2),
+ plot(gr, layout = matrix(c(-4,4,-4,2,-4,0,-4,-2,0,1,0,-1), byrow=T, ncol=2),
+      vertex.label=c(expression(a[0]^{(2)}), expression(a[1]^{(2)}),
+        expression(a[2]^{(2)}),expression(a[3]^{(2)}),
         expression(a[1]^3), expression(a[2]^3)), 
       vertex.size=50, 
    vertex.color=c('gray','salmon','salmon','salmon','red','red'), vertex.label.cex=1.5,
       vertex.label.color='white',vertex.frame.color=NA,
-   edge.label=c(expression(theta[10]^2),expression(theta[20]^2),
-     expression(theta[11]^2),expression(theta[21]^2), expression(theta[12]^2),  expression(theta[22]^2), expression(theta[13]^2), expression(theta[23]^2)))
+   edge.label=c(expression(theta[10]^{(2)}),expression(theta[20]^{(2)}),
+     expression(theta[11]^{(2)}),expression(theta[21]^{(2)}), expression(theta[12]^{(2)}),  expression(theta[22]^{(2)}), expression(theta[13]^{(2)}), expression(theta[23]^{(2)})))
 ```
 
 
@@ -548,7 +548,7 @@ capa 2 (en gris están los sesgos):
 ```{r, echo =FALSE, fig.width=7}
  gr <- graph(
    c(c(1,4,1,5,2,4,2,5,3,4,3,5, 6, 4, 6, 5)))
- plot(gr, layout = matrix(c(-4,1,-4,0,-4,-2,0,1,0,-1, -4, -1), byrow=T, ncol=2),
+ plot(gr, layout = matrix(c(-4,3,-4,0,-4,-7,0,2,0,-2, -4, -3), byrow=T, ncol=2),
       vertex.label=c('-2','5','1','a_1 ?','a_2 ?','3'), vertex.label.cex=1.5,
       vertex.size=50, vertex.color=c('salmon','salmon','gray','red','red'), vertex.label.cex=2,
       vertex.label.color='white',vertex.frame.color=NA,
@@ -590,8 +590,8 @@ a_3
  gr <- graph(
    c(c(1,4,1,5,2,4,2,5,3,4,3,5, 6, 4, 6, 5)))
  plot(gr, layout = matrix(c(-4,1,-4,0,-4,-2,0,1,0,-1, -4, -1), byrow=T, ncol=2),
-      vertex.label=c('-2','5','1','a_1= 0.002','a_2=0.250','3'), vertex.label.cex=1.5,
-      vertex.size=50, vertex.color=c('salmon','salmon','gray','red','red'), vertex.label.cex=2,
+      vertex.label=c('-2','5','1','0.002','0.250','3'), vertex.label.cex=1.5,
+      vertex.size=50, vertex.color=c('salmon','salmon','gray','red','red'), vertex.label.cex=0.5,
       vertex.label.color='white',vertex.frame.color=NA,
    edge.label=c(1.5,2,-1,0.5,3,1,-0.5,-0.2))
 ```
