--- a/notas/09-1-redes-convolucionales.Rmd
+++ b/notas/09-1-redes-convolucionales.Rmd
@@ -338,7 +338,7 @@ y usaremos una arquitectura un poco más simple:
 # set.seed no funciona. Podemos usar use_session_with_seed https://keras.rstudio.com/articles/faq.html#how-can-i-obtain-reproducible-results-using-keras-during-development
 #
 use_session_with_seed(72881)
-usar_cache <- TRUE
+usar_cache <- FALSE
 if(!usar_cache){
     # correr modelo y guardarlo serializado
     #set.seed(213)
@@ -352,7 +352,6 @@ if(!usar_cache){
                     kernel_regularizer = regularizer_l2(lambda),
                     name = 'conv_1') %>%
       layer_max_pooling_2d(pool_size = c(2, 2), name = "conv_1_down") %>% 
-      #layer_spatial_dropout_2d(rate = 0.10) %>% 
       layer_dropout(rate = 0.25) %>% 
       layer_conv_2d(filters = 4, kernel_size = c(3, 3), 
                     activation = 'relu',
@@ -360,11 +359,7 @@ if(!usar_cache){
                     name = 'conv_2') %>% 
       layer_max_pooling_2d(pool_size = c(2, 2), name = "conv_2_down") %>% 
       layer_dropout(rate = 0.25) %>% 
-      #layer_spatial_dropout_2d(rate = 0.10) %>% 
       layer_flatten() %>% 
-      #layer_dense(units = 10, activation = 'relu',
-      #            kernel_regularizer = regularizer_l2(lambda)) %>%
-      #layer_dropout(rate = 0.25) %>%
       layer_dense(units = 10, activation = 'softmax', 
                   kernel_regularizer = regularizer_l2(lambda))
     
@@ -376,8 +371,8 @@ if(!usar_cache){
     history <- model_2 %>% fit(
       x_train, y_train, 
       epochs = 50, batch_size = 50, 
-      verbose = 0
-      #validation_data = list(x_test, y_test)
+      verbose = 0,
+      validation_data = list(x_test, y_test)
     )
     model_serialized <- serialize_model(model_2)
     saveRDS(model_serialized, file= 'cache_obj/red_conv_ser.rds')
@@ -399,7 +394,7 @@ score_entrena
 
 ### Conteo de parámetros {-}
 
-En pimer lugar, contemos el número de parámetros. Podemos ver los
+En primer lugar, contemos el número de parámetros. Podemos ver los
 matrices donde están guardados los pesos:
 ```{r}
 wts <- get_weights(model_2)
@@ -450,7 +445,7 @@ capa_list <- lapply(1:dim(capa_1)[4], function(i){
 #capa_list
 graficar_pesos <- function(capa_list, ncol = 2, blank = FALSE){
     g_salida <- ggplot(capa_list, aes(x = x, y = -y)) + 
-        geom_raster(aes(fill = val), interpolate = TRUE) + 
+        geom_raster(aes(fill = val), interpolate = FALSE) + 
         facet_wrap(~unidad, ncol = ncol) + 
         coord_equal() + 
         scale_fill_gradient2(low = "red", mid='gray80',high = "black")   
@@ -463,10 +458,10 @@ graficar_pesos <- function(capa_list, ncol = 2, blank = FALSE){
 graficar_pesos(capa_list, 4)
 ```
 
-Nota que estos son detectores de formas geométricas simples (diagonales, bordes).  Interpreta cada uno de estos filtros
+Nota que estos son detectores de formas geométricas simples (diagonales, bordes) y
+tienen estructura espacial. Interpreta cada uno de estos filtros.
 
-
-Podemos ver las activaciones de la primera capa para algunos dígitos:
+Podemos ahora ver las activaciones de la primera capa para algunos dígitos:
 
 ```{r, message=FALSE, warning = FALSE}
 library(gridExtra)
@@ -504,9 +499,6 @@ grid.arrange(g_1, g_2, g_3, g_4, ncol = 4)
 
 
 
-
-
-
 La segunda es capa de convolución es más difícil de interpretar. En esta
 capa, cada unidad de salida es combinación del filtrado de las
 8 "imágenes" de la capa anterior.
@@ -519,8 +511,8 @@ for(j in 1:dim(capa_1)[4]){
   out_temp <- list()
   for(i in 1:dim(capa_2)[4]){
   dat_lay <- data_frame(val = as.numeric(capa_2[,,j,i]), 
-    pixel = 1:9, unidad=i, origen = j) %>% 
-    mutate(y = (pixel-1) %% 3, x = (pixel-1) %/% 3) 
+    pixel = 1:25, unidad=i, origen = j) %>% 
+    mutate(y = (pixel-1) %% 5, x = (pixel-1) %/% 5) 
   out_temp[[i]] <- dat_lay
   }
   out[[j]] <- bind_rows(out_temp)
