--- a/notas/09-1-redes-convolucionales.Rmd
+++ b/notas/09-1-redes-convolucionales.Rmd
@@ -334,12 +334,12 @@ Para fines de interpretación, agregaremos regularización ridge además
 de dropout (puedes obtener buen desempeño usando solamente dropout), 
 y usaremos una arquitectura un poco más simple:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 # reproducibilidad en keras es más difícil, pues hay varias capas de software
 # set.seed no funciona. Podemos usar use_session_with_seed https://keras.rstudio.com/articles/faq.html#how-can-i-obtain-reproducible-results-using-keras-during-development
 #
 use_session_with_seed(72881)
-usar_cache <- FALSE
+usar_cache <- TRUE
 if(!usar_cache){
     # correr modelo y guardarlo serializado
     #set.seed(213)
@@ -348,30 +348,33 @@ if(!usar_cache){
     model_2 %>%
       layer_conv_2d(filters = 6, kernel_size = c(5, 5), 
                     activation = 'relu',
+                    padding = 'same',
                     input_shape = c(16, 16, 1), 
-                    padding ='same',
                     kernel_regularizer = regularizer_l2(lambda),
                     name = 'conv_1') %>%
       layer_max_pooling_2d(pool_size = c(2, 2), name = "conv_1_down") %>% 
-      layer_dropout(rate = 0.25) %>% 
+      layer_dropout(rate = 0.2) %>% 
       layer_conv_2d(filters = 4, kernel_size = c(3, 3), 
                     activation = 'relu',
                     kernel_regularizer = regularizer_l2(lambda),
                     name = 'conv_2') %>% 
       layer_max_pooling_2d(pool_size = c(2, 2), name = "conv_2_down") %>% 
-      layer_dropout(rate = 0.25) %>% 
+      layer_dropout(rate = 0.2) %>% 
       layer_flatten() %>% 
+      layer_dense(units = 30, activation = 'relu', 
+                  kernel_regularizer = regularizer_l2(0.0001)) %>% 
+      layer_dropout(0.2) %>% 
       layer_dense(units = 10, activation = 'softmax', 
-                  kernel_regularizer = regularizer_l2(lambda))
+                  kernel_regularizer = regularizer_l2(0.0001))
     
     model_2 %>% compile(
       loss = 'categorical_crossentropy',
-      optimizer = optimizer_sgd(lr = 0.01,  momentum = 0.9, nesterov = TRUE),
+      optimizer = optimizer_sgd(lr = 0.005,  momentum = 0.9, nesterov = TRUE),
       metrics = c('accuracy','categorical_crossentropy')
     )
     history <- model_2 %>% fit(
       x_train, y_train, 
-      epochs = 50, batch_size = 50, 
+      epochs = 300, batch_size = 64, 
       verbose = 0,
       validation_data = list(x_test, y_test)
     )
@@ -433,10 +436,11 @@ las activaciones de la capa de salida de esta segunda convolución.
 
 ### Pesos y activaciones {-}
 
-Y ahora graficamos los filtros aprendidos en la primera capa:
+Ahora graficamos los filtros (los *kernels*) aprendidos en la primera capa:
 
 ```{r, fig.width=4, message=FALSE, warning=FALSE}
 library(scales)
+wts <- get_weights(model_2)
 capa_1 <- wts[[1]] 
 capa_list <- lapply(1:dim(capa_1)[4], function(i){
     data_frame(val = as.numeric(capa_1[,,1,i]), pixel = 1:25, unidad = i) }) %>% 
@@ -462,139 +466,166 @@ graficar_pesos(capa_list, 4)
 Nota que estos son detectores de formas geométricas simples (diagonales, bordes) y
 tienen estructura espacial. Interpreta cada uno de estos filtros.
 
-Podemos ahora ver las activaciones de la primera capa para algunos dígitos:
+Podemos ahora ver las activaciones de la primera capa para algunos dígitos. Las
+activaciones son las salidas de las unidades después de la primera capa convolucional
+y la aplicación de la activación *relu*. Estas activaciones se calculan en función
+de los pesos de la gráfica anterior.
 
 ```{r, message=FALSE, warning = FALSE}
+# Extraer activaciones para los primeros 50 dígitos
 red_conv_1 <- keras_model(inputs = model_2$input,
     outputs = get_layer(model_2, 'conv_1')$output)
 activaciones_1 <- predict(red_conv_1, x_train[1:50,,,,drop=FALSE])
+```
 
-graficar_activaciones <- function(activaciones, ind, ncol = 4){
+
+```{r, include=FALSE}
+graficar_activaciones <- function(activaciones, ind, ncol = 1, filtros = NULL){
   probas_ind <- activaciones[ind,,,] # drop primera dimensión
+  digito <- x_train[ind,,,1]
   x_tamaño <- dim(probas_ind)[2]
   y_tamaño <- dim(probas_ind)[1]
   num_filtros <- dim(probas_ind)[3]
-  unidades_df <- lapply(1:dim(probas_ind)[3], function(i){
+  digito_df <- tibble(val = as.numeric(digito), pixel = 1:(16*16)) %>% 
+      mutate(y = (pixel-1) %% 16, x = (pixel-1) %/% 16)
+  unidades_lista <- lapply(1:dim(probas_ind)[3], function(i){
     mat <- probas_ind[,,i]
-    data_frame(val = as.numeric(mat), pixel = 1:(x_tamaño * y_tamaño), 
+    tibble(val = as.numeric(mat), pixel = 1:(x_tamaño * y_tamaño), 
                unidad = i) %>%
       mutate(y = (pixel-1) %% x_tamaño, x = (pixel-1) %/% y_tamaño)  %>%
-      group_by(unidad) 
+      group_by(unidad) %>% 
+      mutate(val = val / max(val))
   })
-  dat <- bind_rows(unidades_df)
-  ggplot(dat, aes(x = x, y = - y, fill = val)) + geom_raster() + 
+  dat <- bind_rows(unidades_lista)
+  if(!is.null(filtros)){
+      dat <- dat %>% filter(unidad %in% filtros)
+  }
+  
+  g_1 <- ggplot(dat, aes(x = x, y = -y, fill = val)) + geom_raster() + 
     facet_wrap(~ unidad, ncol = ncol) +
-    scale_fill_gradient2(low = "white", mid = "white", high = "blue", midpoint = 0.1) + 
+    scale_fill_gradient2(low = "black", mid = "black", high = "white", midpoint = 0.1) + 
     coord_equal() +
     theme(legend.position = "none",   strip.background = element_blank(),
   strip.text.x = element_blank(), axis.text = element_blank(), axis.ticks = element_blank())+
     ylab("")+ xlab("")
+  g_2 <- ggplot(digito_df, aes(x = x, y = -y, fill = val)) + geom_raster() +
+      scale_fill_gradient2(low = "black", mid = "black", high = "white", midpoint = 0.01) + 
+    coord_equal() +  theme(legend.position = "none",   strip.background = element_blank(),
+  strip.text.x = element_blank(), axis.text = element_blank(), axis.ticks = element_blank())+
+    ylab("")+ xlab("")
+  grid.arrange(g_2, g_1, ncol = 1)
 }
 g_1 <- graficar_activaciones(activaciones_1, 5, 2)
 g_2 <- graficar_activaciones(activaciones_1, 15, 2)
 g_3 <- graficar_activaciones(activaciones_1, 8, 2)
-g_4 <- graficar_activaciones(activaciones_1, 33, 2)
+g_4 <- graficar_activaciones(activaciones_1, 4, 2)
+```
+
+```{r}
 grid.arrange(g_1, g_2, g_3, g_4, ncol = 4)
 ```
 
 
-
-La segunda es capa de convolución es más difícil de interpretar. En esta
-capa, cada unidad de salida es combinación del filtrado de las
-8 "imágenes" de la capa anterior.
-
-Los filtros aprendidos en la segunda capa son:
-```{r}
-capa_2 <- wts[[3]] 
-out <- list()
-for(j in 1:dim(capa_1)[4]){
-  out_temp <- list()
-  for(i in 1:dim(capa_2)[4]){
-  dat_lay <- data_frame(val = as.numeric(capa_2[,,j,i]), 
-    pixel = 1:25, unidad=i, origen = j) %>% 
-    mutate(y = (pixel-1) %% 5, x = (pixel-1) %/% 5) 
-  out_temp[[i]] <- dat_lay
-  }
-  out[[j]] <- bind_rows(out_temp)
-}
-capa_out <- bind_rows(out)
-library(gridExtra)
-g_1 <- graficar_pesos(capa_list, ncol = 1, blank = TRUE)
-g_2 <- ggplot(capa_out, aes(x = x, y = -y)) + 
-  geom_raster(aes(fill = val), interpolate=FALSE) + 
-  facet_grid(origen ~ unidad) + 
-  coord_equal() +
-  scale_fill_gradient2(low = "red", mid='white',high = "black") +
-  theme(strip.background = element_blank(), strip.text = element_blank())
-g_1
-g_2
-```
-
-Nótese que en esta gráfica los filtros tienen una
-estructura espacial. En esta gráfica:
-
-- los renglones son las unidades de la capa origen (después de la primera convolución),
-- las columnas son las unidades de salida de la segunda capa de convolución.
-
-Veamos ahora las activaciones de las dos capas convolucionales:
+Veamos ahora las activaciones de las segunda capa convolucional para distintos dígitos:
 
 ```{r}
 red_conv_2 <- keras_model(inputs = model_2$input,
-    outputs = get_layer(model_2, 'conv_2')$output)
+    outputs = get_layer(model_2, "conv_2")$output)
 activaciones_2 <- predict(red_conv_2, x_train[1:50,,,,drop=FALSE])
 dim(activaciones_2)
 ```
 
-```{r}
-require(gridExtra)
-grid.arrange(graficar_activaciones(activaciones_1, 5), 
-             graficar_activaciones(activaciones_2, 5), ncol=2)
-grid.arrange(graficar_activaciones(activaciones_1, 15), 
-             graficar_activaciones(activaciones_2, 15), ncol=2)
-grid.arrange(graficar_activaciones(activaciones_1, 33), 
-             graficar_activaciones(activaciones_2, 33), ncol=2)
-grid.arrange(graficar_activaciones(activaciones_1, 8), 
-             graficar_activaciones(activaciones_2, 8), ncol=2)
-grid.arrange(graficar_activaciones(activaciones_1, 18), 
-             graficar_activaciones(activaciones_2, 18), ncol=2)
+```{r, include = FALSE}
+digitos_ind <- c(5, 49, 3, 45, 11, 18, 10, 4, 15, 28, 1, 44, 2, 9)
+grafs_0 <- map(digitos_ind, ~ graficar_activaciones(activaciones_2, .x, filtros = c(1,2,3,4)))
 ```
 
-Finalmente, podemos ver los pesos de la última capa, organizada por el pixel de la capa anterior
-que multiplican (una vez que hicimos el pooling de 6x6 a 3x3). Los renglones son los dígitos, 
-y las columnas son los 4 filtros de la capa
-convolucional anterior. Examina por ejemplo qué pasa con el dígito 1:
+```{r, fig.width = 14, fig.height = 8}
+grid.arrange(grobs = grafs_0, nrow = 1)
+```
+
+
+## Buscando imágenes que maximizan la salida de filtros
+
+Una manera de entender qué es lo que están "buscando" los filtros de 
+capas más profundas es buscando imágenes que maximicen la respuesta de cada filtro,
+como en [este ejemplo, de donde tomamos el código](https://jjallaire.github.io/deep-learning-with-r-notebooks/notebooks/5.4-visualizing-what-convnets-learn.nb.html). Ver también [Deep Learning with R](https://www.manning.com/books/deep-learning-with-r).
+
+En nuestro caso, para los filtros reducidos de la capa 2 obtenemos:
 
 ```{r}
-capa_densa <- wts[[5]] 
-out <- list()
-for(j in 1:dim(capa_densa)[2]){
-  out_temp <- list()
-  mat <- capa_densa[,j] 
-  dim(mat) <- c(4,3,3)
-  mat <- aperm(mat, c(3, 2, 1))
-  for(i in 1:4){
-    dat_lay <- data_frame(val = as.numeric(mat[,,i]), 
-        pixel = 1:9, unidad = i, origen = j) %>% 
-        mutate(y = (pixel-1) %% 3, x = (pixel-1) %/% 3) 
-    out_temp[[i]] <- dat_lay
-  }
-  out[[j]] <- bind_rows(out_temp)
+# Cógido tomado de 
+# https://jjallaire.github.io/deep-learning-with-r-notebooks/notebooks/5.4-visualizing-what-convnets-learn.nb.html
+deprocess_image <- function(x) {
+ 
+  dms <- dim(x)
+  
+  # normalize tensor: center on 0., ensure std is 0.1
+  x <- x - mean(x) 
+  x <- x / (sd(x) + 1e-5)
+  x <- x * 0.1 
+  
+  # clip to [0, 1]
+  x <- x + 0.5 
+  x <- pmax(0, pmin(x, 1))
+  
+  # Reshape to original image dimensions
+  array(x, dim = dms)
 }
-capa_salida <- bind_rows(out)
- ggplot(capa_salida, aes(x = x, y = -y)) + 
-  geom_raster(aes(fill = val), interpolate=FALSE) + 
-  facet_grid(origen ~ unidad) + 
-  coord_equal() +
-  scale_fill_gradient2(low = "red", mid='white',high = "black") +
-  theme(strip.background = element_blank(), strip.text = element_blank())
+generate_pattern <- function(layer_name, filter_index, size = 32) {
+  
+  # Build a loss function that maximizes the activation
+  # of the nth filter of the layer considered.
+  layer_output <- model_2$get_layer(layer_name)$output
+  loss <- k_mean(layer_output[,,,filter_index]) 
+  
+  # Compute the gradient of the input picture wrt this loss
+  grads <- k_gradients(loss, model_2$input)[[1]]
+  
+  # Normalization trick: we normalize the gradient
+  grads <- grads / (k_sqrt(k_mean(k_square(grads)))+ 1e-4)
+  
+  # This function returns the loss and grads given the input picture
+  iterate <- k_function(list(model_2$input), list(loss, grads))
+  
+  # We start from a gray image with some noise
+  input_img_data <- array(runif(size * size * 1), dim = c(1, size, size, 1))*0.2 + 0.5
+  
+  step <- 0.05
+  for (i in 1:1000) {
+    c(loss_value, grads_value) %<-% iterate(list(input_img_data))
+    input_img_data <- input_img_data + (grads_value * step) 
+    input_img_data <- input_img_data + 
+        (array(runif(size * size * 1), dim = c(1, size, size, 1)) - 0.5)*0.2
+  }
+  for (i in 1:500) {
+    c(loss_value, grads_value) %<-% iterate(list(input_img_data))
+    input_img_data <- input_img_data + (grads_value * step) 
+  }
+  
+  
+  img <- input_img_data[1,,,]
+  deprocess_image(img)
+}
+```
+
+```{r, fig.width=10, fig.height=2}
+set.seed(3)
+rotate <- function(x) t(apply(x, 2, rev))
+par(mfrow=c(1,6))
+for(i in 1:6){
+    generate_pattern("conv_1_down", i) %>% rotate %>% image()   
+}
 ```
 
 
 
 
-```{r, echo=FALSE, eval=FALSE,include=FALSE}
-mat_0 <- wts[[5]][,9]
-dim(mat_0) <- c(4,3,3)
-mat_0 <- aperm(mat_0, c(3,2,1))
-mat_0 %>% round(2)
+```{r, fig.width=6, fig.height=2}
+par(mfrow=c(1,4))
+for(i in 1:4){
+    generate_pattern("conv_2_down", i) %>% rotate %>% image    
+}
 ```
+
+
