--- a/notas/09-2-redes-conv-texto.Rmd
+++ b/notas/09-2-redes-conv-texto.Rmd
@@ -33,8 +33,9 @@ red toma la sucesión de palabras y sustituye para cada palabra un vector de dim
 library(tidyverse)
 library(keras)
 use_session_with_seed(21)
-textos <- c("El perro corre", "El Gato corre rápido.", "El Gato es rápido", 
-            "El gato corre despacio", "El perro corre despacio")
+textos <- c("el gato no corre", "el gato corre", "el perro no corre", "el perro corre",
+            "el perro duerme", "el perro no duerme", "el gato duerme", "un gato que corre",
+            "un gato corre")
 tokenizador <- text_tokenizer(num_words = 7, lower = TRUE, split = " ")
 ```
 
@@ -138,18 +139,20 @@ modelo_ft
 Ahora podemos intentar hacer un detector de gatos que corren rápido:
 
 ```{r}
-y <- c(0, 1, 1, 0, 0)
+y <- c(0, 1, 0, 0,0,0,0,1,1)
 compile(modelo_ft, loss = 'binary_crossentropy',
       optimizer = optimizer_sgd(lr = 0.5))
 historia <- fit(modelo_ft, textos_seq_relleno, y, 
-      epochs = 200, batch_size = 5, verbose = 0)
+      epochs = 100, batch_size = 9, verbose = 0)
 predict(modelo_ft, textos_seq_relleno)
 ```
 
 Examinamos los pesos obtenidos:
 
 ```{r}
-lapply(get_weights(modelo_ft), round, 2)
+pesos <- map(get_weights(modelo_ft), round, 1)
+rownames(pesos[[1]]) <- c("0", indices_palabras[1:6])
+pesos
 ```
 Interpreta las dimensiones que aprendimos, y explica cómo funciona esta red.
 
@@ -167,15 +170,16 @@ de longitud $k$
 ### Ejemplo
 
 ```{r}
-textos <- c("El perro corre", "El Gato corre rápido.", "El Gato es rápido", 
-            "El Gato corre no rápido.",
-            "El gato corre despacio", "El perro corre despacio", "Mi gato corre poco rápido",
-            "El perro corre rápido", "El gato no corre despacio", "El gato es poco rápido",
-            "este gato es rápido", "el perro corre poco despacio", "el perro corre despacio")
-y <- c(0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0)
-tokenizador <- text_tokenizer(num_words = 10, lower = TRUE, split = " ")
+textos <- c("El Gato corre rápido.", "El Gato no corre", 
+            "El Gato corre.", "Un gato corre", "un gato que corre", "un gato no corre",
+            "un gato duerme", "un gato come", "un gato no come", "un gato no duerme",
+            "El perro corre rápido.", "El perro no corre", 
+            "El perro corre.", "Un perro corre", "un perro que corre", "un perro no corre",
+            "el perro duerme", "un perro no duerme")
+y <- c(1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
+tokenizador <- text_tokenizer(num_words = 11, lower = TRUE, split = " ")
 tokenizador %>% fit_text_tokenizer(textos)
-indices_palabras <- unlist(tokenizador$index_word[1:9])
+indices_palabras <- unlist(tokenizador$index_word[1:10])
 indices_palabras
 textos_seq <- texts_to_sequences(tokenizador, textos)
 textos_entrena <- pad_sequences(textos_seq)
@@ -186,29 +190,35 @@ Y ahora construimos el modelo y entrenamos:
 ```{r}
 modelo_ft <- keras_model_sequential()
 modelo_ft %>% 
-  layer_embedding(output_dim = 3, input_dim = 10, input_length = 5,
-                  embeddings_regularizer = regularizer_l1(0.005)) %>% 
-  layer_conv_1d(filters = 1, kernel_size = 3, kernel_regularizer = regularizer_l1(0.005)) %>% 
+  layer_embedding(output_dim = 1, input_dim = 11, input_length = 4,
+                  embeddings_regularizer = regularizer_l1(0.001)) %>% 
+  layer_conv_1d(filters = 1, kernel_size = 3, kernel_regularizer = regularizer_l1(0.001)) %>% 
   layer_flatten() %>% 
   layer_dense(units = 1, activation = "sigmoid")
 ```
 
 ```{r}
 compile(modelo_ft, loss = 'binary_crossentropy',
-      optimizer = optimizer_sgd(lr = 0.05))
+      optimizer = optimizer_sgd(lr = 0.01))
 historia <- fit(modelo_ft, textos_entrena, y, 
-      epochs = 1000, batch_size = 11, verbose = 0)
+      epochs = 1000, batch_size = 10, verbose = 0)
 predict(modelo_ft, textos_entrena) %>% round(2)
 ```
 
 ```{r}
 pesos <- map(get_weights(modelo_ft), round, 1)
-rownames(pesos[[1]]) <- c("0", indices_palabras)
+rownames(pesos[[1]]) <- c("0", indices_palabras[1:10])
 pesos
 ```
 
 
-Interpreta cómo funciona esta red.
+Interpreta cómo funciona esta red:
 
+1. Escribe las frase el gato corre, el gato no corre, el perro corre, el perro no duerme. Rellena para que tengan la misma longitud.
+2. Sustituye el valor de la dimensión latente para cada palabra
+3. Calcula la convolución. ¿Cuándo tiene valores grandes cada convolución?
+4. Explica por qué hay 2 coeficientes en la última capa.
 
 ## Ejemplo (imdb)
+
+
